# jinja-roos-components

./: .gitignore  CHANGES.md  KNOWN_ISSUES.md  README.md  WEB-TYPES.md  component-definitions.json  conftest.py  debug_preprocessing.py  package-lock.json  package.json  pyproject.toml  test_alias_functionality.py  test_alias_simple.py  test_complex_jinja.py  test_docs_aliases.py  test_extension_jinja.py  test_simple.py  test_with_extension.py  tsconfig.json  web-types.json  webpack.config.js  webpack.config.prod.broken.js
.claude/: settings.local.json
.github/workflows/: test.yml
.storybook/: main.js  preview-body.html  preview-head.html  preview.js
conversion/: README.md  SPLIT_COMPONENT_GUIDE.md  convert_component.py
conversion/customizations/: QUICKSTART.md  README.md  __init__.py  _tokens.json  action-group.json  alert.json  button.json  card.json  customization_loader.py  form-fieldset.json  form-select.json  horizontal-rule.json  icon.json  ol.json  paragraph.json  tabs.json  ul.json
conversion/customs/: table.json  tbody.json  td.json  th.json  thead.json  tr.json
conversion/definitions/: action-group.json  button.json  feedback.json  field.json  form-field.json  ol.json  (+7 more)
docs/: ATTRIBUTE_MAPPING.md  ATTRIBUTE_PASSTHROUGH.md  BOOLEAN_ATTRIBUTES.md  COMPONENT_TO_HTML_MAPPING.md  EVENT_HANDLING.md  UTILITY_CLASSES.md
examples/: README.md  docs_service.py  fastapi_app.py  test_boolean_fix.html
jinja-roos-components/: README.md  package-lock.json  pyproject.toml  tsconfig.json  webpack.config.js  webpack.config.prod.broken.js
jinja_roos_components/: extension_dom.py
scripts/: create_component_web_types.py  debug_extension.py  design_tokens.json  extract_component_definitions.py  extract_design_tokens.py  generate_component_docs.py  generate_design_tokens_docs.py  generate_design_tokens_docs_old.py  generate_vscode_custom_data.py  menubar_data_examples.py  regenerate_components.py
storybook/: generate-stories.mjs  render_api.py
tests/: compare_outputs.py  debug_user_template.py  test_alert.py  test_alias_functionality.py  test_alias_simple.py  test_all_components.py  test_button.py  test_button_direct.py  test_click_parsing.py  test_complex_jinja.py  test_custom_data_conversion.py  test_docs_aliases.py  test_event_parsing.py  test_extension.py  test_extension_jinja.py  test_extension_v2.py  test_html_parser.py  test_icon.py  test_jinja_attrs.py  test_link.py  test_menubar_data.py  test_original_syntax.py  test_preprocessed_template.py  test_secret_field.py  test_select.py  test_tag.py  test_ul_universal_attributes.py
(+294 files in other folders)
