[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project]
name = "jinja-roos-components"
version = "0.1"
description = "Modern, self-contained Jinja2 component library with built-in assets"
readme = "README.md"
license = {text = "EUPL"}
authors = [
    {name = "RIG Cluster Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.12"
dependencies = [
    "Jinja2>=3.0.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
fastapi = [
    "fastapi>=0.100.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.20.0",
]
examples = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
flask = [
    "flask>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/RijksICTGilde/jinja-roos-components"
Repository = "https://github.com/RijksICTGilde/jinja-roos-components.git"
Issues = "https://github.com/RijksICTGilde/jinja-roos-components/issues"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "B", "I", "N", "UP", "C4", "SIM"]
ignore = ["B008", "B905"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=jinja_roos_components --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]